# PULkit

./: .gitignore  PUL_rules.py  README.md  rf_classifier.py  test.py  utils.py
tmp/transferred/PANORAMA/: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
tmp/transferred/PANORAMA/.docs/source/: conf.py  index.md
tmp/transferred/PANORAMA/.docs/source/_static/css/: custom.css
tmp/transferred/PANORAMA/.docs/source/api/: panorama.alignment.md  panorama.annotate.md  panorama.compare.md  panorama.detection.md  panorama.format.md  panorama.info.md  panorama.md  panorama.utility.md
tmp/transferred/PANORAMA/.docs/source/developper/: conserved_spot_script.md  draw.md  draw_spot_script.md  figure_script.md  system_asso_script.md  write.md  write_flat_script.md
tmp/transferred/PANORAMA/.docs/source/user/: align.md  annotation.md  cluster.md  compare.md  detection.md  draw.md  info.md  install.md  report.md  utility.md  write.md
tmp/transferred/PANORAMA/.docs/source/user/flat_files/: all_conserved_spot.tsv  conserved_spot_26.tsv  conserved_spot_link_systems.tsv  duplicatas_or_triplicatas_fams_in_borders.tsv  global_module_to_system.tsv  global_spot_to_system.tsv  global_systems.tsv  global_systems_number_id.tsv  global_systems_number_total.tsv  module_to_system_Acinetobacter_indicus.tsv  (+5 more)
tmp/transferred/PANORAMA/PANORAMA.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tmp/transferred/PANORAMA/panorama/: main.py  region.py  utils.py
tmp/transferred/PANORAMA/panorama/alignment/: __init__.py  cluster.py
tmp/transferred/PANORAMA/panorama/annotate/: __init__.py  annotate.py  hmm_search.py
tmp/transferred/PANORAMA/panorama/compare/: context.py  spots.py  systems.py
tmp/transferred/PANORAMA/panorama/format/: read_binaries.py  write_binaries.py  write_proksee.py
tmp/transferred/PANORAMA/panorama/info/: __init__.py  download.js  filterData.js  hide_show.js  info.py
tmp/transferred/PANORAMA/panorama/systems/: detection.py  models.py  system.py  systems_partitions.py  systems_projection.py  utils.py  write_systems.py
tmp/transferred/PANORAMA/panorama/utility/: genInput.py  utility.py
tmp/transferred/PANORAMA/panorama/workflow/: __init__.py  pansystems.py
tmp/transferred/PANORAMA/tests/: context_test.py
xylan/: README  (+7 more)
(+1293 files in other folders)
